--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Command line tool for dictionary",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec",
+    "test_check": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
   "homepage": "https://github.com/kishanpradhan/dictionary#readme",
   "dependencies": {
     "commander": "^2.19.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
