--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/kishanpradhan/dictionary#readme",
   "dependencies": {
-    "commander": "^2.19.0"
+    "commander": "^2.19.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
